# mocha-browser

./: .commit-msg.txt  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  windows-build.yml
chromium-browser/: .gitignore  README.md  build.ps1  build.sh  make-mocha-app.sh  setup.ps1  setup.sh
crates/mocha_compat/: Cargo.toml
crates/mocha_compat/src/: lib.rs  main.rs
crates/mocha_cookie/: Cargo.toml
crates/mocha_cookie/src/: date.rs  lib.rs
crates/mocha_css/: Cargo.toml
crates/mocha_css/src/: lib.rs  parser.rs  tokenizer.rs
crates/mocha_desktop/: Cargo.toml
crates/mocha_desktop/src/: address_bar.rs  anim.rs  app_dirs.rs  browser_app.rs  chrome.rs  icons.rs  lib.rs  main.rs  new_tab.rs  profile.rs  render.rs  session.rs  tab.rs  text.rs  theme.rs  views.rs  window.rs
crates/mocha_devtools/: Cargo.toml
crates/mocha_devtools/src/: lib.rs
crates/mocha_dom/: Cargo.toml
crates/mocha_dom/src/: lib.rs
crates/mocha_engine/: Cargo.toml
crates/mocha_engine/src/: lib.rs
crates/mocha_error/: Cargo.toml
crates/mocha_error/src/: lib.rs
crates/mocha_events/: Cargo.toml
crates/mocha_events/src/: dispatcher.rs  event.rs  lib.rs
crates/mocha_forms/: Cargo.toml
crates/mocha_forms/src/: default_action.rs  lib.rs  metrics.rs  state.rs  submission.rs
crates/mocha_gzip/: Cargo.toml
crates/mocha_gzip/src/: adler32.rs  crc32.rs  gzip.rs  inflate.rs  lib.rs
crates/mocha_gzip/testdata/: hello.txt  lorem.txt
crates/mocha_html/: Cargo.toml
crates/mocha_html/src/: lib.rs  tokenizer.rs
crates/mocha_image/: Cargo.toml
crates/mocha_image/src/: lib.rs
crates/mocha_ipc/: Cargo.toml
crates/mocha_ipc/src/: lib.rs
crates/mocha_js/: Cargo.toml
crates/mocha_js/src/: ast.rs  builtins.rs  environment.rs  host.rs  interpreter.rs  lexer.rs  lib.rs  parser.rs  token.rs  value.rs
crates/mocha_js_dom/: Cargo.toml
crates/mocha_js_dom/src/: lib.rs
crates/mocha_layout/: Cargo.toml
crates/mocha_layout/src/: block.rs  box_tree.rs  context.rs  debug.rs  flex.rs  geometry.rs  inline.rs  lib.rs  line.rs
crates/mocha_nav/: Cargo.toml
crates/mocha_nav/src/: default_action.rs  lib.rs
crates/mocha_net/: Cargo.toml
crates/mocha_net/src/: cache.rs  content_type.rs  file.rs  http.rs  lib.rs  net_log.rs  test_server.rs  tls.rs
crates/mocha_net/testdata/: README.md  localhost-cert.der  localhost-key.der
crates/mocha_origin/: Cargo.toml
crates/mocha_origin/src/: lib.rs
crates/mocha_paint/: Cargo.toml
crates/mocha_paint/src/: lib.rs
crates/mocha_perf/: Cargo.toml
crates/mocha_perf/src/: lib.rs  main.rs
crates/mocha_process/: Cargo.toml
crates/mocha_process/src/: lib.rs
crates/mocha_process/tests/: renderer_manager.rs
crates/mocha_raster/: Cargo.toml
crates/mocha_raster/src/: font.rs  lib.rs
crates/mocha_resources/: Cargo.toml
crates/mocha_resources/src/: lib.rs
crates/mocha_sandbox/: Cargo.toml
crates/mocha_sandbox/src/: lib.rs
crates/mocha_security/: Cargo.toml
crates/mocha_security/src/: lib.rs
crates/mocha_shell/: Cargo.toml
crates/mocha_shell/src/: lib.rs  main.rs
crates/mocha_storage/: Cargo.toml
crates/mocha_storage/src/: bookmarks.rs  cookies.rs  downloads.rs  history.rs  lib.rs  local_storage.rs  migrations.rs  session.rs  session_storage.rs  settings.rs
crates/mocha_style/: Cargo.toml
crates/mocha_style/src/: lib.rs  matching.rs
crates/mocha_text/: Cargo.toml
crates/mocha_text/src/: lib.rs
crates/mocha_url/: Cargo.toml
crates/mocha_url/src/: lib.rs
docs/: release-readiness.md
docs/architecture/: browser-chrome.md  compatibility-level-1.md  compatibility-testing.md  content-security-policy.md  cookies-and-web-storage.md  crate-boundaries.md  desktop-shell.md  devtools.md  dom-bindings.md  events.md  forms-and-controls.md  images-and-replaced-elements.md  ipc.md  javascript-interpreter.md  limitations.md  milestones-7-8-9-plan.md  milestones.md  multiprocess-prototype.md  networking-and-navigation.md  origin-model.md  overview.md  performance-baselines.md  profile-storage.md  rasterization.md  rendering-pipeline.md  resource-broker.md  security-foundation.md  security-sandbox.md  subresources.md  tabs-and-session.md
docs/release/: windows-exe.md
examples/basic/: index.html
examples/desktop/: interactive-form.html
examples/forms/: basic-form.html  checkbox-radio.html  form-submit.html  js-form-state.html  textarea-select.html
examples/images/: basic-image.html  inline-image.html  sized-image.html
examples/js/: dom-basic.html  dom-style-mutation.html  event-listener.html  timer.html
examples/layout/: article.html  box-model.html  inline-wrap.html
examples/resources/: external-css.html
examples/styled/: index.html
scripts/: make-test-png.js  package-windows.ps1
tests/compat/: ci-manifest.toml  manifest.toml
tests/compat/browser/: devtools-console.html  devtools-dom.html  devtools-layout.html  tab-session-snapshot.html
tests/compat/css/: attribute-selector.html  child-combinator.html  class-selector.html  compound-selector.html  descendant-selector.html  external-stylesheet.html  id-selector.html  important-beats-specificity.html  inheritance-color.html  inline-beats-stylesheet.html  media-query-applies.html  next-sibling-combinator.html  not-pseudo.html  nth-child.html  selector-list.html  specificity-id-beats-class.html  type-selector.html  universal-selector.html  unsupported-attribute-selector.html  unsupported-calc.html  unsupported-media-query.html  unsupported-pseudo-class.html  unsupported-rgb-function.html  unsupported-var.html
tests/compat/dom/: create-element-append.html  get-element-by-id.html  inner-html.html  query-selector-all.html  query-selector.html  remove-child.expect.txt  remove-child.html  script-error-aborts.html  (+2 more)
tests/crash/: crash_corpus.rs
tests/integration/: events_pipeline.rs  forms_pipeline.rs  image_pipeline.rs  js_dom_pipeline.rs  milestone_1_pipeline.rs  navigation_pipeline.rs  rendering_pipeline.rs  subresource_pipeline.rs
tests/visual/: README.md  manifest.toml  visual_regression.rs
(+94 files in other folders)
