[workspace]
resolver = "2"
members = [
    "crates/mocha_error",
    "crates/mocha_url",
    "crates/mocha_dom",
    "crates/mocha_html",
    "crates/mocha_css",
    "crates/mocha_style",
    "crates/mocha_layout",
    "crates/mocha_paint",
    "crates/mocha_net",
    "crates/mocha_nav",
    "crates/mocha_events",
    "crates/mocha_forms",
    "crates/mocha_js",
    "crates/mocha_js_dom",
    "crates/mocha_resources",
    "crates/mocha_image",
    "crates/mocha_shell",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/mocha-browser/mocha-browser"

[workspace.dependencies]
mocha_error = { path = "crates/mocha_error" }
mocha_url = { path = "crates/mocha_url" }
mocha_dom = { path = "crates/mocha_dom" }
mocha_html = { path = "crates/mocha_html" }
mocha_css = { path = "crates/mocha_css" }
mocha_style = { path = "crates/mocha_style" }
mocha_layout = { path = "crates/mocha_layout" }
mocha_paint = { path = "crates/mocha_paint" }
mocha_net = { path = "crates/mocha_net" }
mocha_nav = { path = "crates/mocha_nav" }
mocha_events = { path = "crates/mocha_events" }
mocha_forms = { path = "crates/mocha_forms" }
mocha_js = { path = "crates/mocha_js" }
mocha_js_dom = { path = "crates/mocha_js_dom" }
mocha_resources = { path = "crates/mocha_resources" }
mocha_image = { path = "crates/mocha_image" }
mocha_shell = { path = "crates/mocha_shell" }

# The only third-party dependency in the workspace: a safe image decoder for
# Milestone 9. `default-features = false` keeps the dependency tree minimal — only
# the PNG and JPEG codecs are pulled in (no GIF/WebP/TIFF/etc., no rayon).
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
