[workspace]
resolver = "2"
members = [
    "crates/mocha_error",
    "crates/mocha_url",
    "crates/mocha_dom",
    "crates/mocha_html",
    "crates/mocha_css",
    "crates/mocha_style",
    "crates/mocha_layout",
    "crates/mocha_paint",
    "crates/mocha_net",
    "crates/mocha_nav",
    "crates/mocha_events",
    "crates/mocha_forms",
    "crates/mocha_js",
    "crates/mocha_js_dom",
    "crates/mocha_resources",
    "crates/mocha_image",
    "crates/mocha_storage",
    "crates/mocha_engine",
    "crates/mocha_raster",
    "crates/mocha_desktop",
    "crates/mocha_shell",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/mocha-browser/mocha-browser"

[workspace.dependencies]
mocha_error = { path = "crates/mocha_error" }
mocha_url = { path = "crates/mocha_url" }
mocha_dom = { path = "crates/mocha_dom" }
mocha_html = { path = "crates/mocha_html" }
mocha_css = { path = "crates/mocha_css" }
mocha_style = { path = "crates/mocha_style" }
mocha_layout = { path = "crates/mocha_layout" }
mocha_paint = { path = "crates/mocha_paint" }
mocha_net = { path = "crates/mocha_net" }
mocha_nav = { path = "crates/mocha_nav" }
mocha_events = { path = "crates/mocha_events" }
mocha_forms = { path = "crates/mocha_forms" }
mocha_js = { path = "crates/mocha_js" }
mocha_js_dom = { path = "crates/mocha_js_dom" }
mocha_resources = { path = "crates/mocha_resources" }
mocha_image = { path = "crates/mocha_image" }
mocha_storage = { path = "crates/mocha_storage" }
mocha_engine = { path = "crates/mocha_engine" }
mocha_raster = { path = "crates/mocha_raster" }
mocha_desktop = { path = "crates/mocha_desktop" }
mocha_shell = { path = "crates/mocha_shell" }

# Image decoder (Milestone 9): used by mocha_image for PNG/JPEG intrinsic
# dimensions. Only PNG and JPEG codecs are enabled (no GIF/WebP/TIFF/etc.).
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# Embedded SQLite (Milestone 14): the storage backend for mocha_storage (profile
# history/bookmarks/settings/downloads/session). `bundled` compiles SQLite from
# source so there is no system-library or network dependency at runtime. No ORM,
# no async runtime, no remote/network database.
rusqlite = { version = "0.40", features = ["bundled"] }

# Desktop window (Milestone 11): a cross-platform window + event loop via minifb.
# This is optional and behind mocha_desktop's non-default `gui` feature. The
# default `cargo build/test --all` pulls it (since clippy tests --all-features),
# but runtime binaries can avoid it if they compile without `gui`. The terminal
# shell (mocha_shell) does not use minifb and is purely std-based.
minifb = { version = "0.28", default-features = false, features = ["x11", "wayland"] }
