[package]
name = "mocha_net"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Minimal resource loading for Mocha Browser: file, HTTP, and HTTPS (rustls) with redirects, chunked/gzip decoding, content-type, and an in-memory cache."

[features]
# Exposes the localhost `test_server` helper for integration tests in other crates.
test-util = []

[dependencies]
mocha_error.workspace = true
mocha_url.workspace = true
mocha_gzip.workspace = true
# TLS for https:// (Milestone 21). The HTTP protocol itself stays hand-written;
# rustls only wraps the TcpStream. webpki-roots supplies a baseline CA trust
# store; rustls-native-certs adds the operating system's trust store (like a
# mainstream browser) so Mocha also works behind corporate proxies / TLS-
# inspecting antivirus that inject their own CA.
rustls.workspace = true
webpki-roots.workspace = true
rustls-native-certs = "0.8"

[dev-dependencies]
# Used only by cookie-integration tests to supply a CookieProvider over a jar.
mocha_cookie.workspace = true
