[package]
name = "mocha_paint"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Display-list generation for Mocha Browser (terminal output only, no real painting)."

[dependencies]
mocha_error.workspace = true
mocha_layout.workspace = true
