[package]
name = "mocha_sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Capability-based renderer sandbox prototype for Mocha Browser."

[dependencies]
mocha_error.workspace = true
mocha_url.workspace = true
mocha_origin.workspace = true
mocha_security.workspace = true
mocha_ipc.workspace = true
