[package]
name = "mocha_shell"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line shell that wires Mocha Browser's local HTML/CSS rendering pipeline together."

[[bin]]
name = "mocha_shell"
path = "src/main.rs"

[lib]
name = "mocha_shell"
path = "src/lib.rs"

# The end-to-end pipeline integration test lives at the repository root (as
# required by the project layout) but is compiled and run as part of this crate.
[[test]]
name = "rendering_pipeline"
path = "../../tests/integration/rendering_pipeline.rs"

[[test]]
name = "navigation_pipeline"
path = "../../tests/integration/navigation_pipeline.rs"

[[test]]
name = "events_pipeline"
path = "../../tests/integration/events_pipeline.rs"

[dependencies]
mocha_error.workspace = true
mocha_url.workspace = true
mocha_html.workspace = true
mocha_style.workspace = true
mocha_layout.workspace = true
mocha_paint.workspace = true
mocha_net.workspace = true
mocha_nav.workspace = true

[dev-dependencies]
mocha_dom.workspace = true
mocha_events.workspace = true
mocha_net = { workspace = true, features = ["test-util"] }
