[package]
name = "mocha_shell"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Terminal frontend for Mocha Browser: renders a document through mocha_engine and prints the display list, layout tree, or form state (terminal-first, no window)."

[[bin]]
name = "mocha_shell"
path = "src/main.rs"

[lib]
name = "mocha_shell"
path = "src/lib.rs"

# The end-to-end pipeline integration test lives at the repository root (as
# required by the project layout) but is compiled and run as part of this crate.
[[test]]
name = "rendering_pipeline"
path = "../../tests/integration/rendering_pipeline.rs"

[[test]]
name = "navigation_pipeline"
path = "../../tests/integration/navigation_pipeline.rs"

[[test]]
name = "events_pipeline"
path = "../../tests/integration/events_pipeline.rs"

[[test]]
name = "js_dom_pipeline"
path = "../../tests/integration/js_dom_pipeline.rs"

[[test]]
name = "subresource_pipeline"
path = "../../tests/integration/subresource_pipeline.rs"

[[test]]
name = "image_pipeline"
path = "../../tests/integration/image_pipeline.rs"

[[test]]
name = "forms_pipeline"
path = "../../tests/integration/forms_pipeline.rs"

[dependencies]
mocha_error.workspace = true
mocha_js.workspace = true
mocha_layout.workspace = true
mocha_paint.workspace = true
mocha_engine.workspace = true

# The integration tests (declared as this crate's [[test]] targets) drive the
# pipeline crates directly, so they appear here as dev-dependencies even though
# the shell library itself only depends on mocha_engine + the print helpers.
[dev-dependencies]
mocha_error.workspace = true
mocha_url.workspace = true
mocha_dom.workspace = true
mocha_html.workspace = true
mocha_style.workspace = true
mocha_layout.workspace = true
mocha_paint.workspace = true
mocha_events.workspace = true
mocha_forms.workspace = true
mocha_nav.workspace = true
mocha_js_dom.workspace = true
mocha_net = { workspace = true, features = ["test-util"] }
